--- a/_templates/layout.inc.html.twig
+++ b/_templates/layout.inc.html.twig
@@ -20,6 +20,16 @@
     {{ stylesheet('/assets/css/docs.css', 'app') }}
 
     {{ stylesheets() }}
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-2364455-13', 'michaldudek.pl');
+      ga('send', 'pageview');
+    </script>
 </head>
 
 <body {% block body_attr %}{% endblock %}>
