--- a/assets/less/docs.less
+++ b/assets/less/docs.less
@@ -127,6 +127,14 @@ pre[class*="language-"] {
         }
     }
 
+    .more {
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 30px;
+        text-align: center;
+        font-size: 18px;
+    } 
+
     .using {
         width: 75%;
         margin: 0 auto;
